[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "GPS"
version = "1.1.0"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang1999@163.com" },
]
description = "Plane Geometric Problem Solving Integrating Formal Symbolic System and Hypergraph Neural Network"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "formalgeo==0.0.6",
    "chardet==5.2.0",
    "psutil==5.9.7",
    "matplotlib==3.8.2",
    "python-Levenshtein==0.23.0"
]
[project.urls]
"Homepage" = "https://github.com/BitSecret/HyperGNet"
"Bug Tracker" = "https://github.com/BitSecret/HyperGNet/issues"